crates/gridwell-writer-html/tests/snapshots/snapshots__min-max-width.snap
---
source: crates/gridwell-writer-html/tests/snapshots.rs
expression: out
---
<div class="gw_container">
  <style>
    .gw__al_left { text-align: left }
  </style>
  <table class="gw_table">
    <thead>
      <tr>
        <th class="gw__al_left">Constrained</th>
        <th class="gw__al_left">Free</th>
      </tr>
    </thead>
    <tbody>
      <tr>
        <td>clamped between 80 and 200px</td>
        <td>grows freely</td>
      </tr>
    </tbody>
  </table>
</div>
