crates/gridwell-writer-html/tests/snapshots/snapshots__mixed-spans.snap
---
source: crates/gridwell-writer-html/tests/snapshots.rs
expression: out
---
<div class="gw_container">
  <style>
    .gw_table .gw__al_left { text-align: left }
  </style>
  <table class="gw_table">
    <thead>
      <tr>
        <th class="gw__al_left">A</th>
        <th class="gw__al_left">B</th>
        <th class="gw__al_left">C</th>
      </tr>
    </thead>
    <tbody>
      <tr>
        <td colspan="2" rowspan="2">2x2 block</td>
        <td>top-right</td>
      </tr>
      <tr>
        <td>mid-right</td>
      </tr>
      <tr>
        <td>x</td>
        <td>y</td>
        <td>z</td>
      </tr>
    </tbody>
  </table>
</div>
