crates/gridwell-writer-html/tests/snapshots/snapshots__multi-col-stub.snap
---
source: crates/gridwell-writer-html/tests/snapshots.rs
expression: out
---
<div class="gw_container">
  <style>
    .gw_table .gw__al_left { text-align: left }
  </style>
  <table class="gw_table">
    <thead>
      <tr>
        <th class="gw__al_left">Region</th>
        <th class="gw__al_left">City</th>
        <th class="gw__al_left">Sales</th>
        <th class="gw__al_left">Growth</th>
      </tr>
    </thead>
    <tbody>
      <tr>
        <td>East</td>
        <td>NYC</td>
        <td>60</td>
        <td>3%</td>
      </tr>
      <tr>
        <td>West</td>
        <td>LA</td>
        <td>50</td>
        <td>2%</td>
      </tr>
    </tbody>
  </table>
</div>
