crates/gridwell-writer-html/tests/snapshots/snapshots__narrow-wide-mix.snap
---
source: crates/gridwell-writer-html/tests/snapshots.rs
expression: out
---
<div class="gw_container">
  <style>
    .gw__al_left { text-align: left }
    .gw__al_right { text-align: right }
  </style>
  <table class="gw_table" style="width: 100%">
    <colgroup>
      <col style="width: 40px">
      <col>
    </colgroup>
    <thead>
      <tr>
        <th class="gw__al_right">#</th>
        <th class="gw__al_left">Description</th>
      </tr>
    </thead>
    <tbody>
      <tr>
        <td class="gw__al_right">1</td>
        <td>A long descriptive line of text.</td>
      </tr>
      <tr>
        <td class="gw__al_right">2</td>
        <td>Another spanning description here.</td>
      </tr>
    </tbody>
  </table>
</div>
