crates/gridwell-writer-html/tests/snapshots/snapshots__nested-spanners.snap
---
source: crates/gridwell-writer-html/tests/snapshots.rs
expression: out
---
<div class="gw_container">
  <style>
    .gw_table .gw__al_center { text-align: center }
    .gw_table .gw__al_left { text-align: left }
  </style>
  <table class="gw_table">
    <thead>
      <tr>
        <th class="gw__al_center" scope="colgroup" colspan="2">Group A</th>
        <th class="gw__al_center" scope="colgroup" colspan="2">Group B</th>
      </tr>
      <tr>
        <th class="gw__al_left">A1</th>
        <th class="gw__al_left">A2</th>
        <th class="gw__al_left">B1</th>
        <th class="gw__al_left">B2</th>
      </tr>
    </thead>
    <tbody>
      <tr>
        <td>1</td>
        <td>2</td>
        <td>3</td>
        <td>4</td>
      </tr>
      <tr>
        <td>5</td>
        <td>6</td>
        <td>7</td>
        <td>8</td>
      </tr>
    </tbody>
  </table>
</div>
