crates/gridwell-writer-html/tests/snapshots/snapshots__numeric-right-align.snap
---
source: crates/gridwell-writer-html/tests/snapshots.rs
expression: out
---
<div class="gw_container">
  <style>
    .gw__al_left { text-align: left }
    .gw__al_right { text-align: right }
  </style>
  <table class="gw_table">
    <thead>
      <tr>
        <th class="gw__al_left">Product</th>
        <th class="gw__al_right">Qty</th>
        <th class="gw__al_right">Price</th>
      </tr>
    </thead>
    <tbody>
      <tr>
        <td>Widget</td>
        <td class="gw__al_right">12</td>
        <td class="gw__al_right">3.50</td>
      </tr>
      <tr>
        <td>Gadget</td>
        <td class="gw__al_right">4</td>
        <td class="gw__al_right">19.99</td>
      </tr>
    </tbody>
  </table>
</div>
