crates/gridwell-writer-html/tests/snapshots/snapshots__per-column-align.snap
---
source: crates/gridwell-writer-html/tests/snapshots.rs
expression: out
---
<div class="gw_container">
  <style>
    .gw__al_center { text-align: center }
    .gw__al_justify { text-align: justify }
    .gw__al_left { text-align: left }
    .gw__al_right { text-align: right }
  </style>
  <table class="gw_table">
    <thead>
      <tr>
        <th class="gw__al_left">L</th>
        <th class="gw__al_center">C</th>
        <th class="gw__al_right">R</th>
        <th class="gw__al_justify">J</th>
      </tr>
    </thead>
    <tbody>
      <tr>
        <td>left</td>
        <td class="gw__al_center">center</td>
        <td class="gw__al_right">right</td>
        <td class="gw__al_justify">justified text here</td>
      </tr>
    </tbody>
  </table>
</div>
